# knowledge_base_Q-A_answering_system

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: knowledge_base_qa.ipynb
